Fixed alignment

--- a/styles.less
+++ b/styles.less
@@ -170,12 +170,16 @@ header {
       width: auto;
     }
   }
-  // Media query for case study
+  // Media query for homepage case study
   @media (min-width: 800px) {
     display: flex;
   
+    #qb-image {
+    align-self: center;
+    }
     #sd-image {
-			padding: 0 2rem;
+      align-self: center;
+      padding: 0 2rem;
     }
   }
 }
